# wright

./: .gitignore  Colour.hs  Makefile  README.md  TODO.hs  colour.cabal  wright.cabal
Control/Applicative/: Extra.hs
Data/: Colour.hs  Vector.hs  Wright.hs
Data/Colour/: RGB.hs  Types.hs  White.hs
Data/Colour/CIE/: Illuminant.hs  LAB.hs  XYZ.hs
Data/Colour/RGB/: Matrix.hs
Data/Colour/RGB/Environment/: AdobeRGB1998.hs
Data/Colour/RGB/WorkingSpace/: AdobeRGB1998.hs
Data/Wright/: Colour.hs  RGB.hs  Types.hs
Data/Wright/CIE/: DeltaE.hs  Illuminant.hs  LAB.hs  XYZ.hs  Yxy.hs
Data/Wright/CIE/DeltaE/: CIE94.hs
Data/Wright/CIE/Illuminant/: A.hs  B.hs  C.hs  D50.hs  D55.hs  D65.hs  D75.hs  E.hs  Environment.hs  F1.hs  F10.hs  F11.hs  F12.hs  F2.hs  F3.hs  F4.hs  F5.hs  F6.hs  F7.hs  F8.hs  F9.hs  README.litcoffee
Data/Wright/RGB/: Matrix.hs  Model.hs
Data/Wright/RGB/Environment/: AdobeRGB1998.hs  AppleRGB.hs  BestRGB.hs  BetaRGB.hs  BruceRGB.hs  CIERGB.hs  ColorMatchRGB.hs  DonRGB4.hs  ECIRGBv2.hs  EktaSpacePS5.hs  LabGamut.hs  NTSCRGB.hs  PALSECAMRGB.hs  ProPhotoRGB.hs  README.litcoffee  SMPTECRGB.hs  SRGB.hs  WideGamutRGB.hs
Data/Wright/RGB/Model/: AdobeRGB1998.hs  AppleRGB.hs  BestRGB.hs  BetaRGB.hs  BruceRGB.hs  CIERGB.hs  ColorMatchRGB.hs  DonRGB4.hs  ECIRGBv2.hs  EktaSpacePS5.hs  LabGamut.hs  NTSCRGB.hs  PALSECAMRGB.hs  ProPhotoRGB.hs  README.litcoffee  SMPTECRGB.hs  SRGB.hs  WideGamutRGB.hs
src/Control/Applicative/: Extra.hs
src/Data/: Matrix.hs  Wright.hs
src/Data/Wright/: RGB.hs
src/Data/Wright/CIE/: XYZ.hs  Yxy.hs
src/Data/Wright/CIE/DeltaE/: CIE2000.hs  CIE76.hs
src/Data/Wright/CIE/Illuminant/: C.hs  D50.hs  E.hs  F1.hs  F10.hs  F3.hs  F4.hs  F7.hs  README.litcoffee
src/Data/Wright/RGB/: Compand.hs
src/Data/Wright/RGB/Model/: BetaRGB.hs  CIERGB.hs  PALSECAMRGB.hs  ProPhotoRGB.hs  README.litcoffee  SRGB.hs  WideGamutRGB.hs
test/: Main.hs
test/Assertions/: Metric.hs  Shared.hs  Transform.hs
test/Data/: CSV.hs
test/Numeric/: Approximate.hs
test/fixtures/convert/: README.litcoffee
test/fixtures/diff/: README.litcoffee
tests/: Approximate.hs  CSV.hs  Convert.hs  Diff.hs  Wright.hs
tests/fixtures/: README.litcoffee  conv.csv  table.csv
tests/fixtures/diff/: diff.csv
