name:                wright
version:             0.1.0.0
synopsis:            Surjections between colour spaces.
license:             MIT
license-file:        LICENSE
author:              vi
maintainer:          me@vikramverma.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Wright, Data.Wright.Types, Data.Wright.RGB, Data.Wright.RGB.Environment.AdobeRGB1998, Data.Wright.CIE.XYZ, Data.Wright.CIE.LAB, Control.Applicative.Extra, Data.Wright.CIE.Illuminant
  build-depends:       base >=4.6 && <4.7, bed-and-breakfast >=0.4 && <0.5, containers>=0.5&&<0.6
  default-language:    Haskell2010
