name:                wright
version:             0.1.0.0
synopsis:            Surjections between colour spaces.
license:             MIT
license-file:        LICENSE
author:              vi
maintainer:          me@vikramverma.com
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Wright
  other-extensions:    FlexibleInstances, UndecidableInstances
  build-depends:       base >=4.6 && <4.7, bed-and-breakfast >=0.4 && <0.5, containers >= 0.5 && < 0.6, assert >=0.1 && <0.2, filepath >=1.3 && <1.4, lens >=3.10 && <3.11
  default-language:    Haskell2010
